DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Condition_on_query__c.field-meta.xml
<CustomField>
    <fullName>gnx__Condition_on_query__c</fullName>
    <label>Condition on query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>