DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Document_template__c.field-meta.xml
<CustomField>
    <fullName>gnx__Document_template__c</fullName>
    <label>Document template</label>
    <referenceTo>gnx__Document_template__c</referenceTo>
    <relationshipName>Document_template_objects1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>