DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Field_to_group_on__c.field-meta.xml
<CustomField>
    <fullName>gnx__Field_to_group_on__c</fullName>
    <label>Field to group on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>