DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Fields_included_in_if_statement__c.field-meta.xml
<CustomField>
    <fullName>gnx__Fields_included_in_if_statement__c</fullName>
    <label>Fields included in if statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>