DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Fields_to_query_for_images__c.field-meta.xml
<CustomField>
    <fullName>gnx__Fields_to_query_for_images__c</fullName>
    <label>Fields to query for images</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>