DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Fields_to_query_with_format__c.field-meta.xml
<CustomField>
    <fullName>gnx__Fields_to_query_with_format__c</fullName>
    <label>Fields to query with format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>