DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Generated_file_name_suffix__c.field-meta.xml
<CustomField>
    <fullName>gnx__Generated_file_name_suffix__c</fullName>
    <label>Generated file name suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>