DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Lookup_name_on_child_object__c.field-meta.xml
<CustomField>
    <fullName>gnx__Lookup_name_on_child_object__c</fullName>
    <label>Lookup name on child object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>