DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Object_API_name__c.field-meta.xml
<CustomField>
    <fullName>gnx__Object_API_name__c</fullName>
    <label>Object API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>