DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__parent_object__c.field-meta.xml
<CustomField>
    <fullName>gnx__parent_object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent object</label>
    <referenceTo>gnx__Document_template_object__c</referenceTo>
    <relationshipLabel>child objects</relationshipLabel>
    <relationshipName>child_objects</relationshipName>
    <type>Lookup</type>
</CustomField>