DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/fields/gnx__Remove_table_if_empty__c.field-meta.xml
<CustomField>
    <fullName>gnx__Remove_table_if_empty__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Le tableau du document word sera supprimé si aucun enregistrement enfant n&apos;est trouvé</inlineHelpText>
    <label>Remove table if empty</label>
    <type>Checkbox</type>
</CustomField>