DigicielFull/force-app/main/default/objects/gnx__Document_template_object__c/recordTypes/gnx__Child.recordType-meta.xml
<RecordType>
    <fullName>gnx__Child</fullName>
    <active>true</active>
    <label>Child</label>
</RecordType>